// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api key form 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.LEGACY.Section>
    <Stack>
      <NameField />
      <ApiKeyCheckBox
        createApiKey={true}
      />
      <ApiKeyFields
        grants={
          Array [
            "subaccount grants",
          ]
        }
        show={true}
        showGrants={false}
      />
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        submit={true}
        variant="primary"
      >
        Create Subaccount
      </Button>
      <PageLink
        as={[Function]}
        to="/account/subaccounts"
        variant="secondary"
      >
        Cancel
      </PageLink>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</form>
`;

exports[`base case 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.LEGACY.Section>
    <Stack>
      <NameField />
      <ApiKeyCheckBox
        createApiKey={false}
      />
      <ApiKeyFields
        grants={
          Array [
            "subaccount grants",
          ]
        }
        show={false}
        showGrants={false}
      />
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        submit={true}
        variant="primary"
      >
        Create Subaccount
      </Button>
      <PageLink
        as={[Function]}
        to="/account/subaccounts"
        variant="secondary"
      >
        Cancel
      </PageLink>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</form>
`;

exports[`has ip pools 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.LEGACY.Section>
    <Stack>
      <NameField />
      <ApiKeyCheckBox
        createApiKey={false}
      />
      <ApiKeyFields
        grants={
          Array [
            "subaccount grants",
          ]
        }
        show={false}
        showGrants={false}
      />
      <Stack>
        <RestrictToIpPoolCheckbox />
      </Stack>
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        submit={true}
        variant="primary"
      >
        Create Subaccount
      </Button>
      <PageLink
        as={[Function]}
        to="/account/subaccounts"
        variant="secondary"
      >
        Cancel
      </PageLink>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</form>
`;

exports[`has ip pools and checked checkbox 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.LEGACY.Section>
    <Stack>
      <NameField />
      <ApiKeyCheckBox
        createApiKey={false}
      />
      <ApiKeyFields
        grants={
          Array [
            "subaccount grants",
          ]
        }
        show={false}
        showGrants={false}
      />
      <Stack>
        <RestrictToIpPoolCheckbox />
        <IpPoolSelect
          options={
            Array [
              "salt water",
            ]
          }
        />
      </Stack>
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        submit={true}
        variant="primary"
      >
        Create Subaccount
      </Button>
      <PageLink
        as={[Function]}
        to="/account/subaccounts"
        variant="secondary"
      >
        Cancel
      </PageLink>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</form>
`;

exports[`submits correctly 1`] = `
<form
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": undefined,
    }
  }
>
  <Panel.LEGACY.Section>
    <Stack>
      <NameField
        disabled={true}
      />
      <ApiKeyCheckBox
        createApiKey={false}
        disabled={true}
      />
      <ApiKeyFields
        grants={
          Array [
            "subaccount grants",
          ]
        }
        show={false}
        showGrants={false}
        submitting={true}
      />
    </Stack>
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <ButtonWrapper>
      <Button
        disabled={true}
        submit={true}
        variant="primary"
      >
        Loading...
      </Button>
      <PageLink
        as={[Function]}
        disabled={true}
        to="/account/subaccounts"
        variant="secondary"
      >
        Cancel
      </PageLink>
    </ButtonWrapper>
  </Panel.LEGACY.Section>
</form>
`;
